src/styles/inline.scss
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box; }

html, body {
  padding: 0;
  margin: 0;
  height: 100%;
  width: 100%;
  font-family: 'Open Sans', sans-serif;
  color: #444;
  background-color: white;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; }

  input {
    border: 0;
    outline: 0;
    background: transparent;
    border-bottom: 1px solid lightGray;
  }

.header {
  display: table;
  width: 100%;
  background-color: blue;
  color: white;
  padding: 1em;
}

.vertical-centered {
  display: table-cell;
  vertical-align: middle;
  height: 100px;
}

.login-panel {

  float: right;
  p {
    margin: 0;
  }
}

.title {
  font-size: 3em;
  float: left;
}

.login-name, .login-button {
  display: inline-block;
}

.centered-button {
  text-align: center;
  clear: both;
}

.pizzas {
  text-align: center;
  padding: 1em;

  input {
    font-size:3em;
    background: none;
    width: 2em;
    text-align: center;
  }

  h2 {
    font-size: 1em;
  }
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.ingredients {
  width: 200px * 2;
  height: 200px;
  margin: auto;
}

.ingredient {
  margin-top: 1.4em;
  float: left;
  width: 200px;
  text-align: center;

  p {
    font-size: 2em;
    margin: auto;
  }

  h2 {
    font-size: 0.8em;
    margin-top: 0;
    margin-bottom: 0;
    color: #777777;
  }
}

.settings {
  width: 200px * 2;
  margin: auto;


  h2 {
    font-size: 1em;
    text-align: center;
  }
}

.settings-item{

  margin-top: 1.4em;
  float: left;
  width: 200px;
  text-align: center;

  padding-left: 1em;

  h2 {
    font-size: 1em;
    margin-top: 0;
    margin-bottom: 0;
  }
  p {
    font-size: 1em;
    display: inline-block;
  }
  input {
    font-size: 1em;
    width: 2.5em;
    text-align: right;
  }
}

